objects/AFSC__FS_Quarantine__c.object
<CustomObject>
    <fields>
        <fullName>AFSC__Deleted_Date_Time__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Object_Type__c</fullName>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attachment</fullName>
                </value>
                <value>
                    <fullName>Content Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__Parent_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Sha1__c</fullName>
        <label>Sha1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quarantines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quarantine</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Quarantine Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quarantines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>